fix: scrollbar (#408)

--- a/src/extension-shell/webui.less
+++ b/src/extension-shell/webui.less
@@ -39,7 +39,7 @@ h1 {
   height: 100vh;
 }
 
-@scrollbar-w: 6px;
+@scrollbar-w: 5px;
 @scrollbar-max-w: 10px;
 
 ::-webkit-scrollbar {
@@ -57,7 +57,7 @@ h1 {
 
 ::-webkit-scrollbar-thumb {
   border-radius: 50px;
-  background-color: #787d8c;
+  background-color: #5D626F;
 }
 
 ::-webkit-scrollbar-track {
