--- a/src/renderer/css/mixins.less
+++ b/src/renderer/css/mixins.less
@@ -14,7 +14,7 @@
   -webkit-app-region: none;
 }
 
-@chromelike-scrollbar-w: 6px;
+@chromelike-scrollbar-w: 5px;
 @chromelike-scrollbar-max-w: 10px;
 
 .chrome-like-scrollbar() {
@@ -24,7 +24,7 @@
 
   &::-webkit-scrollbar-thumb {
     border-radius: 50px;
-    background-color: #787D8C;
+    background-color: red;
   }
 
   &::-webkit-scrollbar-track {
